fixed issue with about-bio-flex covering the navbar

--- a/css/about_style.css
+++ b/css/about_style.css
@@ -42,9 +42,14 @@ font-family: 'Oswald', sans-serif;
 	height: 100%;
 	justify-content: center;
 	align-items: center;
-	bottom: 20%;
     position: relative;
-    left: 5%;
+}
+
+.about-bio {
+	text-align: center;
+	position: relative;
+	bottom: 20%;
+	left: 5%;
 }
 
 .about-bio_p {
