--- a/css/style.css
+++ b/css/style.css
@@ -331,10 +331,6 @@ button:hover, button:focus,
 	color: var(--primary-color);
 }
 
-.about-bio {
-	text-align: center;
-}
-
 .skyline {
 	display: block;
 	text-align: center;
